fixing the collapsing menu because of the new font

--- a/style.css
+++ b/style.css
@@ -305,13 +305,13 @@ table {
 /* menu 1 */
 
 .menuRelax {
-    height: 1000px;
+    height: 1200px;
     width: 100%;
     margin: auto;
 }
 
 .menuRelax .containRelax{
-    height:800px;
+    height:1000px;
     width: 80%;
     margin: auto;
 }
